--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,9 @@
-title: ZhechongHuang's homepage
-email: cudraniatrec@163.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-  
-show_downloads: "false"
-google_analytics: [Your Google Analytics tracking ID]
-
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "zhechonghuang.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ""
-github_username:  ZhechongHuang
-
-# Build settings
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
+title: [The title of your site]
+description: [A short description of your site's purpose]
+
+show_downloads: "false"
+google_analytics: [Your Google Analytics tracking ID]
