--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
-title: [The title of your site]
-description: [A short description of your site's purpose]
-
-show_downloads: "false"
-google_analytics: [Your Google Analytics tracking ID]
+title: ZhechongHuang's homepage
+logo: /Assets/picture.jpg
+description: An undergraguate student.
+show_downloads: true
+google_analytics:
+theme: jekyll-theme-minimal
