--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ZhechongHuang's homepage
 logo: /Assets/picture.jpg
 description: An undergraguate student.
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
